--- a/bin/test.css
+++ b/bin/test.css
@@ -1,3 +1,12 @@
-.scroll-pane .viewport {
-       -fx-background-color: transparent;
+.list-cell {
+    -fx-background-color: transparent;
 }
+.list-view {
+    -fx-background-color: transparent;
+}
+
+.button {  
+    -fx-font : 14px "Lucida Console";  
+    -fx-padding : 10;  
+    -fx-background-color : #CCFF99;  
+}   
