--- a/src/test.css
+++ b/src/test.css
@@ -1,3 +1,7 @@
-.scroll-pane .viewport {
-       -fx-background-color: transparent;
+.list-cell {
+    -fx-background-color: transparent;
 }
+.list-view {
+    -fx-background-color: transparent;
+}
+
